<resources>
    <string name="app_name">Marvel</string>
    <string name="action_settings">Settings</string>
    <string name="ver_filtros">Ver filtros</string>
    <string name="loading">Cargando…</string>
    <string name="please_wait">Espere, por favor…</string>
    <string name="no_characters_found">No hay personajes que coincidan con la búsqueda</string>
    <string name="buscar">Buscar</string>
    <string name="borrar_filtro">Borrar filtro</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_modificacion">Fecha de modificación</string>
    <string name="sort_by">Ordenar por:</string>
    <string name="error">Error</string>
    <string name="aceptar">Aceptar</string>
    <string name="seleccione_filtro_nombre">Escriba el nombre por el que quiere que comiencen los personajes (ejemplo: Spider-Man)</string>
    <string name="error_instanciando_dialogo">Error instanciando el diálogo</string>
    <string name="characters_list">Listado de personajes</string>
    <string name="ocultar_filtros">Ocultar filtros</string>
    <string name="progreso">Progreso</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="content_description_character_image">Character image</string>
    <string name="character_not_found">No se ha podido encontrar el personaje indicado</string>
    <string name="comic_not_found">No se ha podido encontrar el cómic indicado</string>
    <string name="comics">Comics</string>
    <string name="number_of_comics">Comics (%1$d)</string>
    <string name="series">Series</string>
    <string name="number_of_series">Series (%1$d)</string>
    <string name="stories">Historias</string>
    <string name="number_of_stories">Historias (%1$d)</string>
    <string name="events">Eventos</string>
    <string name="number_of_events">Eventos (%1$d)</string>
    <string name="error_obteniendo_datos">Ocurrió un error obteniendo los datos. Por favor, inténtelo de nuevo más tarde</string>
    <string name="no_description_available">No description available</string>
    <string name="no_comics_available">No hay comics disponibles</string>
    <string name="no_events_available">No hay eventos disponibles</string>
    <string name="no_series_available">No hay series disponibles</string>
    <string name="no_stories_available">No hay historias disponibles</string>
    <string name="more_items_available">…y %1$d más</string>
    <string name="copyright">Data provided by Marvel. © 2014 Marvel</string>
    <string name="retry">Reintentar</string>
    <string name="url_invalid">En enlace introducido no es válido</string>
    <string name="enlaces_disponibles">Enlaces disponibles</string>
    <string name="navegador">Navegador</string>
    <string name="photo_detail">Detalle foto</string>
    <string name="content_description_comic_image">Portada</string>
    <string name="obteniendo_informacion">Obteniendo información…</string>
    <string name="published_date">Fecha publicación:</string>
    <string name="writer">Autor:</string>
    <string name="writers">Autores:</string>
    <string name="penciller">Dibujante:</string>
    <string name="pencillers">Dibujantes:</string>
    <string name="penciller_cover">Dibujante portada:</string>
    <string name="pencillers_cover">Dibujantes portada:</string>
    <string name="letterer">Rotulista:</string>
    <string name="letterers">Rotulistas:</string>
    <string name="letterer_cover">Rotulista portada:</string>
    <string name="letterers_cover">Rotulistas portada:</string>
    <string name="inker">Entintador:</string>
    <string name="inkers">Entintadores:</string>
    <string name="inker_cover">Entintador portada:</string>
    <string name="inkers_cover">Entintadores portada:</string>
    <string name="colorist">Colorista:</string>
    <string name="colorists">Coloristas:</string>
    <string name="colorist_cover">Colorista portada:</string>
    <string name="colorists_cover">Coloristas portada:</string>
    <string name="editor">Editor:</string>
    <string name="editors">Editores:</string>
    <string name="editor_cover">Editor portada:</string>
    <string name="editors_cover">Editores portada:</string>
    <string name="painter">Pintor:</string>
    <string name="painters">Pintores:</string>
    <string name="painter_cover">Pintor portada:</string>
    <string name="painters_cover">Pintores portada:</string>
    <string name="comic_description">Descripción:</string>
    <string name="variantes_disponibles">Ver variantes disponibles (%1$d)</string>
    <string name="numero_publicacion">Número:</string>
    <string name="more_details">Más detalles</string>
    <string name="format">Formato:</string>
    <string name="price">Precio:</string>
    <string name="prices">Precios:</string>
    <string name="upc">UPC:</string>
    <string name="isbn">ISBN:</string>
    <string name="ean">EAN:</string>
    <string name="issn">ISSN:</string>
    <string name="diamond_code">Diamond code:</string>
    <string name="page_count">Número de páginas:</string>
    <string name="foc_date">Fecha de fin de pedidos:</string>
    <string name="marvel_unlimited_date">Fecha inclusión en Marvel Unlimited:</string>
    <string name="creators">Creadores</string>
    <string name="cover_information">Información portada</string>
    <string name="ver_mas_detalles">Ver más detalles</string>
    <string name="ocultar_mas_detalles">Ocultar más detalles</string>
    <string name="characters">Personajes</string>
    <string name="number_of_characters">Personajes (%1$d)</string>
    <string name="precio_impreso">Impreso</string>
    <string name="precio_digital">Digital</string>
    <string name="marvel_digital_purchase_date">Fecha formato digital:</string>
    <string name="collections_by_comic">Colecciones en las que aparece:</string>
    <string name="collected_issues_collection">Números incluidos en esta colección:</string>
    <string name="no_cover_info">No disponible</string>
    <string name="no_author_info">No disponible</string>
    <string name="images_available">Ver imágenes disponibles (%1$d)</string>
    <string name="series_of_comic">Serie a la que pertenece:</string>
    <string name="fecha_no_disponible">Fecha no disponible</string>
    <string name="price_formatted">%1$.2f $ (%2$s)</string>
    <string name="free_price_formatted">Gratis (%1$s)</string>
    <string name="comic_detail">Detalle cómic</string>
    <string name="error_parseando_info">Ocurrió un error al obtener la información. Error: %1$s</string>
    <string name="image_list">Listado de imágenes</string>
    <string name="photo_index">Imagen %1$d de %2$d</string>
    <string name="error_downloading_characters">Error obteniendo personajes</string>
    <string name="error_downloading_character_details">Error obteniendo los detalles del personaje</string>
    <string name="error_downloading_comic_details">Error obteniendo los detalles del cómic</string>
    <string name="comic_variants">Variantes del cómic</string>
    <string name="error_comic_without_id">Ocurrió un error al obtener el id del comic seleccionado y no es posible ver sus detalles</string>
    <string name="characters_by_comic">Personajes del cómic</string>
    <string name="personajes_presentes_en_el_comic">Personajes presentes en el cómic %1$s</string>
    <string name="no_variants_available">No hay variantes disponibles para este cómic</string>
</resources>