<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/seleccione_filtro_nombre"
        android:background="@color/colorAccent"
        android:labelFor="@+id/etFiltro"/>


    <EditText
        android:id="@+id/etFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:hint="@string/nombre"
        android:textColorHint="@color/dark_grey"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:drawablePadding="10dp">

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/tvAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="12dp"
        android:text="@string/aceptar"
        android:textColor="@color/red_dark_selector"
        android:textAllCaps="true"
        android:textSize="14sp"/>


</LinearLayout>