<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".app.characterdetails.CharacterDetailsActivity"
    tools:showIn="@layout/activity_character_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintBottom_toTopOf="@id/tvCopyright">

            <LinearLayout
                android:id="@+id/llItems"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:weightSum="4"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvComics"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_background_selector"
                    android:textColor="@color/character_item_selector"
                    android:textSize="14sp"
                    android:text="@string/comics"
                    android:gravity="center"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_separator"/>

                <TextView
                    android:id="@+id/tvSeries"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_background_selector"
                    android:textColor="@color/character_item_selector"
                    android:textSize="14sp"
                    android:text="@string/series"
                    android:gravity="center"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_separator"/>

                <TextView
                    android:id="@+id/tvStories"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_background_selector"
                    android:textColor="@color/character_item_selector"
                    android:textSize="14sp"
                    android:text="@string/stories"
                    android:gravity="center"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_separator"/>

                <TextView
                    android:id="@+id/tvEvents"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_background_selector"
                    android:textColor="@color/character_item_selector"
                    android:textSize="14sp"
                    android:text="@string/events"
                    android:gravity="center"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/llItems"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>